# todo-api

./: .dockerignore  .env.local  .env.template  .gitignore  LICENSE.txt  README.md  alembic.ini  compose.yaml  devbox.json  pyproject.toml
.github/workflows/: test.yml
alembic/: README.md  env.py
alembic/versions/: 2024_02_27_1837_9c80390f8ce9_init_migration.py  2024_02_27_2051_502c726aeede_create_task_table.py
app/: deps.py  main.py
app/core/: config.py  database.py
app/infra/db/: base.py  base_class.py
app/models/: task.py  user.py
app/routers/: done.py  task.py
app/schemas/: task.py
local/: Dockerfile
tests/: main_test.py
tests/core/: test_config.py
tests/routers/: done_test.py  task_test.py
